--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			const game = new Phaser.Game(1280, 720, Phaser.AUTO, '', { preload: preload, create: create, update: update });
 
 			var daysSinceStart = 0;
-			const gameState = {
+			var gameState = {
 				happiness: 20,
 				money: 250000,
 				connections: 0,
@@ -74,6 +74,13 @@
 				sport: undefined,
 				lossRate: 1
 			};
+			if(localStorage) {
+				let saved = JSON.parse(localStorage.getItem("gameState"));
+				if(saved != null && saved.happiness < 1000 && saved.daysTillDeath > 0) {
+					gameState = saved;
+					daysSinceStart = parseInt(localStorage.getItem("daysSinceStart"));
+				}
+			}
 
 			var activities;
 			var sports;
@@ -93,7 +100,7 @@
 				game.load.json('activities', './activities.json');
 				game.load.json('sports', './sports.json');
 				game.load.json('investments', './investments.json');
-				game.load.atlas('Calender', 'Days/atlas.png', 'Days/atlas.json', Phaser.Loader.TEXTURE_ATLAS_JSON_HASH);
+				game.load.atlas('Calender', './Days/atlas.png', './Days/atlas.json', Phaser.Loader.TEXTURE_ATLAS_JSON_HASH);
 			}
 			/**
 				"stockOption1": {
@@ -158,6 +165,13 @@
 				if(x.deviation) {
 					let random = Math.random();
 					happiness += (random < x.devBounds[0] ? -x.deviation : (random > x.devBounds[1] ? x.deviation : 0));
+				}
+				if(happiness - gameState.lossRate > 2 && x.social < 9 && !gameState.connected) {
+					notificationQueue[notificationQueue.length] = {
+						title: "Dear Son,",
+						message: "It seems you've finally managed to gain some friends after all these years! It's good to see that you've been able to connect with other people finally after all these years. I told you there was more to life than money!\n\nSincerely,\nDad"
+					};
+					gameState.connected = true;
 				}
 				gameState.happiness += happiness;
 				++x.numCompleted;
@@ -225,9 +239,14 @@
 				gameState.lossRate = 300 / gameState.daysTillDeath;
 				gameState.happiness -= gameState.lossRate / days;
 				if(gameState.happiness > 1000) {
-					console.log(daysSinceStart);
+					notificationQueue[notificationQueue.length] = {
+						title: "Congratulations,",
+						type: "end",
+						message: "In your short time left on earth, you've reached happiness through hardwork, determination and a willingness to connect with other people. What was that money all worth, when the simplest things can bring happiness?"
+					}
 				}
-				animLocked = true;animFrames = 0;
+				animLocked = true;
+				animFrames = 0;
 				happiness.text = "Happiness: " + Math.floor(gameState.happiness);
 				daysLeft.text = "Days Left: " + Math.floor(gameState.daysTillDeath);
 				money.text = "Money: $" + Math.floor(gameState.money);
@@ -255,14 +274,25 @@
 				if(days > 1) {
 					passTime(days - 1);
 				} else if(notificationQueue.length > 0) {
+					if(localStorage) {
+						localStorage.setItem("gameState", JSON.stringify(gameState));
+						localStorage.setItem("daysSinceStart", daysSinceStart);
+					}
 					currentScreen.visible = false;
 					currentScreen = notificationGroup;
 					notificationGroup.visible = true;
 					let queueItem = notificationQueue[0];
 					notificationGroup.children[2].text = queueItem.title;
 					notificationGroup.children[3].text = queueItem.message;
+					if(queueItem.type && queueItem.type == "end") {
+						notificationGroup.children[4].enabled = false;
+					}
 					notificationQueue.splice(0,1);
 				} else {
+					if(localStorage) {
+						localStorage.setItem("gameState", JSON.stringify(gameState));
+						localStorage.setItem("daysSinceStart", daysSinceStart);
+					}
 					currentScreen.visible = false;
 					currentScreen = false;
 					mousePos.visible = true;
@@ -289,7 +319,10 @@
 			var investmentGroup;
 			var activityGroup;
 			var sportGroup;
-			var notificationQueue = [];
+			var notificationQueue = [{
+				title: "Goal",
+				message: "Try to reach 1000 happiness by the end of your time on earth. You have plenty of cash to help you. Surely buying your way into happiness can't be that hard, right?\n\nClick the computer to invest your money.\nClick behind the door to pick an activity.\nPlay a sport by clicking the shelf."
+			}];
 			var notificationGroup;
 
 			function create() {
@@ -347,6 +380,7 @@
 				vignette.height = canvasHeight;
 				let statsStyle = {
 					fill: "#FFFFFF",
+					font: "22px Verdana",
 					stroke: "black",
 					strokeThickness: 5,
 					shadowFill: true,
@@ -355,8 +389,8 @@
 					shadowOffsetX: 1,
 					shadowOffsetY: 1
 				};
-				happiness = game.add.text(20, 20, "Happiness: 20", statsStyle);
-				daysLeft = game.add.text(20, 50, "Days Left: 365", statsStyle);
+				happiness = game.add.text(20, 20, "Happiness: " + Math.floor(gameState.happiness), statsStyle);
+				daysLeft = game.add.text(20, 50, "Days Left: " + Math.floor(gameState.daysTillDeath), statsStyle);
 				money = game.add.text(20, 80, "Money: $" + Math.floor(gameState.money), statsStyle);
 				investmentGroup = createInvestmentGroup();
 				investmentGroup.visible = false;
@@ -380,7 +414,7 @@
 				music.loopFull(0);
 			}
 
-			var notificationStyle = { font: "22px Arial", fill: "#FFFFFF", align: "left", stroke: "black", strokeThickness: 3, wordWrap: true, wordWrapWidth: 480 };
+			var notificationStyle = { font: "22px Verdana", fill: "#FFFFFF", align: "left", stroke: "black", strokeThickness: 3, wordWrap: true, wordWrapWidth: 480 };
 
 			function createNotificationGroup() {
 				let res = game.add.group();
@@ -584,13 +618,16 @@
 						currentScreen = false;
 						mousePos.visible = true;
 					}
-				} else if(button.id == "Ok") {
+				} else if(button.id == "Ok" && button.enabled != false) {
 					if(notificationQueue.length > 0) {
 						let queueItem = notificationQueue[0];
 						notificationGroup.children[2].text = queueItem.title;
 						notificationGroup.children[3].text = queueItem.message;
+						if(queueItem.type && queueItem.type == "end") {
+							notificationGroup.children[4].enabled = false;
+						}
 						notificationQueue.splice(0,1);
-					} else {
+					} else if(button.enabled != false){
 						currentScreen.visible = false;
 						currentScreen = false;
 						mousePos.visible = true;
@@ -598,9 +635,9 @@
 				}
 			}
 
-			var buttonStyle = { font: "28px Arial", fill: "#FFFFFF", wordWrap: true, wordWrapWidth: 572/3, align: "center", stroke: "black", strokeThickness: 3 };
-			var descriptionStyle = { font: "22px Arial", fill: "#FFFFFF", align: "left", stroke: "black", strokeThickness: 3 };
-			var actStyle = { font: "22px Arial", fill: "#FFFFFF", align: "left", stroke: "black", strokeThickness: 3, wordWrap: true, wordWrapWidth: 640};
+			var buttonStyle = { font: "28px Verdana", fill: "#FFFFFF", wordWrap: true, wordWrapWidth: 572/3, align: "center", stroke: "black", strokeThickness: 3 };
+			var descriptionStyle = { font: "22px Verdana", fill: "#FFFFFF", align: "left", stroke: "black", strokeThickness: 3 };
+			var actStyle = { font: "22px Verdana", fill: "#FFFFFF", align: "left", stroke: "black", strokeThickness: 3, wordWrap: true, wordWrapWidth: 640};
 
 			function makeButtonText(text) {
 				let res = game.add.text(0, 0, text, buttonStyle);
@@ -687,6 +724,10 @@
 		var animLocked = true;
 		var animFrames = 45;
 
+		function easeInOutCubic(t) {
+			return t<.5 ? 4*t*t*t : (t-1)*(2*t-2)*(2*t-2)+1;
+		}
+
 		function iterate() {
 			frameNo++;
 			vignette.alpha = (Math.sin(frameNo/80)/4 + 0.5);
@@ -696,12 +737,12 @@
 				if(animFrames == 45) {
 					calender.animations.frame = (daysSinceStart % 32);
 				}
-				background.y = 0 - (animFrames > 44 ? 1440 : 0) + 1440 * (Math.min(animFrames, 90)/90);
-				bed.y = 0 - (animFrames > 49 ? 1440 : 0) + 1440 * Math.max(Math.min(animFrames - 5, 90)/90, 0);
-				door.y = 0 - (animFrames > 54 ? 1440 : 0) + 1440 * Math.max(Math.min(animFrames - 10, 90)/90, 0);
-				computer.y = 0 - (animFrames > 59 ? 1440 : 0) + 1440 * Math.max(Math.min(animFrames - 15, 90)/90, 0);
-				bench.y = 0 - (animFrames > 64 ? 1440 : 0) + 1440 * Math.max(Math.min(animFrames - 20, 90)/90, 0);
-				calender.y = 0 - (animFrames > 69 ? 1440 : 0) + 1440 * Math.max(Math.min(animFrames - 25, 90)/90, 0) + 150;
+				background.y = 0 - (animFrames > 44 ? 1440 : 0) + 1440 * easeInOutCubic(Math.max(Math.min(animFrames, 90)/90, 0));
+				bed.y = 0 - (animFrames > 49 ? 1440 : 0) + 1440 * easeInOutCubic(Math.max(Math.min(animFrames - 5, 90)/90, 0));
+				door.y = 0 - (animFrames > 54 ? 1440 : 0) + 1440 * easeInOutCubic(Math.max(Math.min(animFrames - 10, 90)/90, 0));
+				computer.y = 0 - (animFrames > 59 ? 1440 : 0) + 1440 * easeInOutCubic(Math.max(Math.min(animFrames - 15, 90)/90, 0));
+				bench.y = 0 - (animFrames > 64 ? 1440 : 0) + 1440 * easeInOutCubic(Math.max(Math.min(animFrames - 20, 90)/90, 0));
+				calender.y = 0 - (animFrames > 69 ? 1440 : 0) + 1440 * easeInOutCubic(Math.max(Math.min(animFrames - 25, 90)/90, 0)) + 150;
 				if(animFrames == 115) {
 					animLocked = false;
 				}
